# linux-sdk

./: LICENSE  README.md  THIRD_PARTY_LICENSE.txt
docs/: 32_8h_source.html  64_8h_source.html  CNAME  __cassert_8h_source.html  __prefix_8h_source.html  _consumer_8hpp_source.html  _data_consumer_8hpp_source.html  _data_producer_8hpp_source.html  _handler_8hpp_source.html  _media_section_8hpp_source.html  _o1__size_8hpp_source.html  _o1__size__fwd_8hpp_source.html  _o1__size__impl_8hpp_source.html  _peer_connection_8hpp_source.html  _producer_8hpp_source.html  _remote_sdp_8hpp_source.html  abseil-cpp_2absl_2types_2internal_2span_8h_source.html  abseil-cpp_2absl_2types_2span_8h_source.html  abstract_2local__room__member_8hpp_source.html  abstract_2room_8hpp_source.html  abstract_2room__domain__factory_8hpp_source.html  abstract_2room__member_8hpp_source.html  accept_8hpp_source.html  adapted__video__track__source_8h_source.html  add_8hpp_source.html  add__const_8hpp_source.html  add__cv_8hpp_source.html  add__lvalue__reference_8hpp_source.html  add__pointer_8hpp_source.html  add__reference_8hpp_source.html  add__rvalue__reference_8hpp_source.html  add__volatile_8hpp_source.html  address_8hpp_source.html  address__v4_8hpp_source.html  address__v6_8hpp_source.html  addressof_8hpp_source.html  adjust__functors_8hpp_source.html  adl_8hpp_source.html  adl__barrier_8hpp_source.html  adl__move__swap_8hpp_source.html  (+19260 more)
docs/html/: abstract_2local__room__member_8hpp_source.html  abstract_2room__member_8hpp_source.html  annotated_dup.js  channel_2channel_8hpp_source.html  channel_2member_2local__person_8hpp_source.html  classskyway_1_1core_1_1_context.html  classskyway_1_1core_1_1_context.js  classskyway_1_1core_1_1_context_1_1_event_listener.html  classskyway_1_1core_1_1_publication.html  classskyway_1_1core_1_1_publication.js  classskyway_1_1core_1_1_subscription.html  classskyway_1_1core_1_1channel_1_1_channel-members.html  classskyway_1_1core_1_1channel_1_1_channel.html  classskyway_1_1core_1_1channel_1_1_channel.js  classskyway_1_1core_1_1interface_1_1_channel.js  classskyway_1_1core_1_1interface_1_1_channel_1_1_event_listener-members.html  classskyway_1_1core_1_1interface_1_1_channel_1_1_event_listener.js  classskyway_1_1core_1_1interface_1_1_local_media_stream-members.html  classskyway_1_1core_1_1interface_1_1_local_media_stream.html  classskyway_1_1core_1_1interface_1_1_local_person-members.html  classskyway_1_1core_1_1interface_1_1_local_person.html  classskyway_1_1core_1_1interface_1_1_local_person.js  classskyway_1_1core_1_1interface_1_1_local_person_1_1_event_listener-members.html  classskyway_1_1core_1_1interface_1_1_local_person_1_1_event_listener.html  classskyway_1_1core_1_1interface_1_1_local_person_1_1_event_listener.js  classskyway_1_1core_1_1interface_1_1_local_stream.html  classskyway_1_1core_1_1interface_1_1_member_1_1_event_listener-members.html  classskyway_1_1core_1_1interface_1_1_member_1_1_event_listener.js  classskyway_1_1core_1_1interface_1_1_publication-members.html  classskyway_1_1core_1_1interface_1_1_publication.html  classskyway_1_1core_1_1interface_1_1_publication_1_1_event_listener.html  classskyway_1_1core_1_1interface_1_1_publication_1_1_event_listener.js  classskyway_1_1core_1_1interface_1_1_remote_media_stream-members.html  classskyway_1_1core_1_1interface_1_1_remote_media_stream.html  classskyway_1_1core_1_1interface_1_1_remote_media_stream.js  classskyway_1_1core_1_1interface_1_1_remote_member-members.html  classskyway_1_1core_1_1interface_1_1_remote_member.html  classskyway_1_1core_1_1interface_1_1_remote_member_plugin-members.html  classskyway_1_1core_1_1interface_1_1_remote_stream-members.html  classskyway_1_1core_1_1interface_1_1_stream-members.html  (+202 more)
docs/html/search/: all_10.js  all_13.js  all_14.js  all_15.js  all_5.js  all_6.js  all_9.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_9.js  classes_b.js  classes_d.js  functions_0.js  functions_11.js  functions_12.js  functions_13.js  functions_3.js  functions_7.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js  variables_4.js  variables_6.js  variables_8.js  variables_9.js  variables_c.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.html  classes_12.js  classes_13.html  classes_13.js  classes_14.html  classes_14.js  classes_15.html  (+180 more)
examples/: CMakeLists.txt
examples/libs/: .gitignore
examples/opencv/: CMakeLists.txt  README.md  example_room.cpp  example_room.hpp  main.cpp
examples/quickstart/: CMakeLists.txt  example_room.cpp  example_room.hpp  main.cpp
examples/sfu/: CMakeLists.txt  example_room.cpp  example_room.hpp  main.cpp
include/skyway/: context.hpp  skyway.hpp
include/skyway/analytics/: analytics_client.hpp  client_event.hpp  config.hpp  server_event.hpp  socket.hpp  socket_factory.hpp
include/skyway/core/: analytics_client_factory.hpp  config.hpp  connection_state.hpp  context.hpp  context_options.hpp  publication.hpp  subscription.hpp
include/skyway/global/: config.hpp  error.hpp  (+5 more)
(+177 files in other folders)
